# weather-lambda

./: .env.example  .gitignore  .mise.toml  Cargo.toml  Makefile  README.md
.github/workflows/: deploy.yml
src/: event_handler.rs  main.rs
src/application/: weather_service.rs
src/domain/: mod.rs  weather.rs
src/infrastructure/: discord.rs  mod.rs  weather_api.rs
src/presentation/: formatter.rs  mod.rs
terraform/: eventbridge.tf  lambda.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
